[gd_scene load_steps=68 format=2]

[ext_resource path="res://Monster.gd" type="Script" id=1]
[ext_resource path="res://characters/mini/slime 1.png" type="Texture" id=2]
[ext_resource path="res://characters/mini/slime 2.png" type="Texture" id=3]
[ext_resource path="res://characters/mini/slime 3.png" type="Texture" id=4]
[ext_resource path="res://characters/mini/slime 4.png" type="Texture" id=5]
[ext_resource path="res://characters/orange/orange filament/ofil 1.png" type="Texture" id=6]
[ext_resource path="res://characters/orange/orange filament/ofil 2.png" type="Texture" id=7]
[ext_resource path="res://characters/orange/orange filament/ofil 3.png" type="Texture" id=8]
[ext_resource path="res://characters/orange/orange filament/ofil 4.png" type="Texture" id=9]
[ext_resource path="res://characters/orange/orange filament/ofil 5.png" type="Texture" id=10]
[ext_resource path="res://characters/orange/orange filament/ofil 6.png" type="Texture" id=11]
[ext_resource path="res://characters/orange/orange filament/ofil 7.png" type="Texture" id=12]
[ext_resource path="res://characters/orange/orange filament/ofil 8.png" type="Texture" id=13]
[ext_resource path="res://characters/orange/orange filament/ofil 9.png" type="Texture" id=14]
[ext_resource path="res://characters/orange/orange filament/ofil 10.png" type="Texture" id=15]
[ext_resource path="res://characters/purple/purple monster/pmon 1.png" type="Texture" id=16]
[ext_resource path="res://characters/purple/purple monster/pmon 2.png" type="Texture" id=17]
[ext_resource path="res://characters/purple/purple monster/pmon 3.png" type="Texture" id=18]
[ext_resource path="res://characters/purple/purple monster/pmon 4.png" type="Texture" id=19]
[ext_resource path="res://characters/purple/purple monster/pmon 5.png" type="Texture" id=20]
[ext_resource path="res://characters/orange/orange monster/omon 1.png" type="Texture" id=21]
[ext_resource path="res://characters/orange/orange monster/omon 2.png" type="Texture" id=22]
[ext_resource path="res://characters/orange/orange monster/omon 3.png" type="Texture" id=23]
[ext_resource path="res://characters/blue/blue monster_/monster 1.png" type="Texture" id=24]
[ext_resource path="res://characters/blue/blue monster_/monster 2.png" type="Texture" id=25]
[ext_resource path="res://characters/blue/blue monster_/monster 3.png" type="Texture" id=26]
[ext_resource path="res://characters/blue/blue monster_/monster 4.png" type="Texture" id=27]
[ext_resource path="res://characters/blue/blue monster_/monster 5.png" type="Texture" id=28]
[ext_resource path="res://characters/blue/blue monster_/monster 6.png" type="Texture" id=29]
[ext_resource path="res://characters/red/red filament/rfil 1.png" type="Texture" id=30]
[ext_resource path="res://characters/red/red filament/rfil 2.png" type="Texture" id=31]
[ext_resource path="res://characters/red/red filament/rfil 3.png" type="Texture" id=32]
[ext_resource path="res://characters/red/red filament/rfil 4.png" type="Texture" id=33]
[ext_resource path="res://characters/red/red filament/rfil 5.png" type="Texture" id=34]
[ext_resource path="res://characters/red/red filament/rfil 6.png" type="Texture" id=35]
[ext_resource path="res://characters/red/red filament/rfil 7.png" type="Texture" id=36]
[ext_resource path="res://characters/red/red filament/rfil 8.png" type="Texture" id=37]
[ext_resource path="res://characters/red/red filament/rfil 9.png" type="Texture" id=38]
[ext_resource path="res://characters/red/red filament/rfil 10.png" type="Texture" id=39]
[ext_resource path="res://characters/blue/blue filament/bfil 1.png" type="Texture" id=40]
[ext_resource path="res://characters/blue/blue filament/bfil 2.png" type="Texture" id=41]
[ext_resource path="res://characters/blue/blue filament/bfil 3.png" type="Texture" id=42]
[ext_resource path="res://characters/blue/blue filament/bfil 4.png" type="Texture" id=43]
[ext_resource path="res://characters/blue/blue filament/bfil 5.png" type="Texture" id=44]
[ext_resource path="res://characters/blue/blue filament/bfil 6.png" type="Texture" id=45]
[ext_resource path="res://characters/blue/blue filament/bfil 7.png" type="Texture" id=46]
[ext_resource path="res://characters/blue/blue filament/bfil 8.png" type="Texture" id=47]
[ext_resource path="res://characters/blue/blue filament/bfil 9.png" type="Texture" id=48]
[ext_resource path="res://characters/blue/blue filament/bfil 10.png" type="Texture" id=49]
[ext_resource path="res://characters/purple/purple filament/pfil 1.png" type="Texture" id=50]
[ext_resource path="res://characters/purple/purple filament/pfil 2.png" type="Texture" id=51]
[ext_resource path="res://characters/purple/purple filament/pfil 3.png" type="Texture" id=52]
[ext_resource path="res://characters/purple/purple filament/pfil 4.png" type="Texture" id=53]
[ext_resource path="res://characters/purple/purple filament/pfil 5.png" type="Texture" id=54]
[ext_resource path="res://characters/purple/purple filament/pfil 6.png" type="Texture" id=55]
[ext_resource path="res://characters/purple/purple filament/pfil 7.png" type="Texture" id=56]
[ext_resource path="res://characters/purple/purple filament/pfil 8.png" type="Texture" id=57]
[ext_resource path="res://characters/purple/purple filament/pfil 9.png" type="Texture" id=58]
[ext_resource path="res://characters/purple/purple filament/pfil 10.png" type="Texture" id=59]
[ext_resource path="res://characters/red/red monster/rmonster 1.png" type="Texture" id=60]
[ext_resource path="res://characters/red/red monster/rmonster 2.png" type="Texture" id=61]
[ext_resource path="res://characters/red/red monster/rmonster 3.png" type="Texture" id=62]
[ext_resource path="res://music/spring (monster).wav" type="AudioStream" id=63]
[ext_resource path="res://music/slime(monster).wav" type="AudioStream" id=64]
[ext_resource path="res://music/flap (monster).wav" type="AudioStream" id=65]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "monster5",
"speed": 7.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": false,
"name": "filam2",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 17 ) ],
"loop": true,
"name": "monster3",
"speed": 10.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 22 ) ],
"loop": true,
"name": "monster2",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 24 ) ],
"loop": true,
"name": "monster1",
"speed": 12.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 30 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ) ],
"loop": false,
"name": "filam4",
"speed": 5.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 40 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ) ],
"loop": false,
"name": "filam1",
"speed": 12.0
}, {
"frames": [ ExtResource( 50 ), ExtResource( 50 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ) ],
"loop": false,
"name": "filam3",
"speed": 5.0
}, {
"frames": [ ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 61 ) ],
"loop": true,
"name": "monster4",
"speed": 6.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 27.5036

[node name="Monster" type="Area2D" groups=[
"monster",
]]
collision_layer = 8
collision_mask = 22
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
playing = true

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Attack_Timer" type="Timer" parent="."]

[node name="Dying_Timer" type="Timer" parent="."]

[node name="Monster_Sound(0)" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 63 )
volume_db = -25.0

[node name="Monster_Sound(1)" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 64 )
volume_db = -18.0

[node name="Monster_Sound(2)" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 63 )
volume_db = -20.0

[node name="Monster_Sound(3)" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 65 )
volume_db = -5.0

[node name="Monster_Sound(4)" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 64 )
volume_db = -18.0

[node name="Visibility" type="VisibilityNotifier2D" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Monster_area_entered"]
[connection signal="timeout" from="Attack_Timer" to="." method="_on_Attack_Timer_timeout"]
[connection signal="timeout" from="Dying_Timer" to="." method="_on_Dying_Timer_timeout"]
[connection signal="screen_exited" from="Visibility" to="." method="_on_Visibility_screen_exited"]
